# python-code-check

./: .pre-commit-config.yaml  hello.py  pyproject.toml
.github/workflows/: lint.yaml  merge-check.yaml
